--- a/n2n_lucktu/docker-compose.yaml
+++ b/n2n_lucktu/docker-compose.yaml
@@ -5,73 +5,69 @@ services:
       context: .
       dockerfile: Dockerfile
     image: zctmdc/n2n_lucktu:Alpha
+    container_name: n2n_supernode
     restart: always
-    privileged: true
+    volumes:
+      - ./config/:/etc/n2n/
+    command: [ 'supernode', '/etc/n2n/supernode.conf' ]
+    # privileged: true
+    # network_mode: host
     ports:
-      - 10086:10086/udp
-    environment:
-      - MODE=SUPERNODE
-      - SUPERNODE_PORT=10086
-      - N2N_ARGS=-f
+      - 10090:10090/udp
+    networks:
+      n2n:
+        ipv4_address: 172.77.5.10
 
-  n2n_edge_dhcpd:
-    depends_on:
-      - n2n_supernode
+  n2n_edge_1:
     image: zctmdc/n2n_lucktu:Alpha
+    container_name: n2n_edge_1
     restart: always
     privileged: true
+    command:
+      [
+        'edge',
+        '-d',
+        'T3',
+        '-a',
+        '10.3.0.77',
+        '-c',
+        'n2n',
+        '-k',
+        'test',
+        '-l',
+        '172.77.5.10:10090',
+        '-e',
+        'auto',
+        '-Efrv'
+      ]
     # network_mode: host
-    environment:
-      - MODE=DHCPD
-      - SUPERNODE_HOST=n2n_supernode
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_dhcpd
-      - EDGE_IP=10.10.10.1
-      - EDGE_COMMUNITY=n2n
-      - EDGE_KEY=test
-      - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
-    # volumes:
-    #   - ./dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
-    external_links:
-      - n2n_supernode:n2n_supernode
-
-  n2n_edge_dhcp:
-    depends_on:
-      - n2n_edge_dhcpd
-      - n2n_supernode
-    image: zctmdc/n2n_ntop:Alpha
-    restart: always
-    privileged: true
-    # network_mode: host
-    environment:
-      - MODE=DHCP
-      - SUPERNODE_HOST=n2n_supernode
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_dhcp
-      - EDGE_COMMUNITY=n2n
-      - EDGE_KEY=test
-      - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
-    external_links:
-      - n2n_supernode:n2n_supernode
-
-  n2n_edge_static:
+    networks:
+      n2n: # ipv4_address: 172.77.5.11
     depends_on:
       - n2n_supernode
-    image: zctmdc/n2n_ntop:Alpha
+    links:
+      - n2n_supernode
+
+  n2n_edge_2:
+    image: zctmdc/n2n_lucktu:Alpha
+    container_name: n2n_edge_2
     restart: always
     privileged: true
+    volumes:
+      - ./config/:/etc/n2n/
+    command: [ 'edge', '/etc/n2n/edge.conf' ]
     # network_mode: host
-    environment:
-      - MODE=STATIC
-      - SUPERNODE_HOST=n2n_supernode
-      - SUPERNODE_PORT=10086
-      - EDGE_TUN=edge_static
-      - EDGE_IP=10.10.10.10
-      - EDGE_COMMUNITY=n2n
-      - EDGE_KEY=test
-      - EDGE_ENCRYPTION=A3
-      - N2N_ARGS=-f
-    external_links:
-      - n2n_supernode:n2n_supernode
+    networks:
+      n2n:
+    depends_on:
+      - n2n_supernode
+    links:
+      - n2n_supernode
+
+networks:
+  n2n:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.77.5.0/24
