--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: n2n_lucktu
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -39,19 +39,19 @@ jobs:
             # https://github.com/sigstore/cosign-installer
             - name: Install cosign
               if: github.event_name != 'pull_request'
-              uses: sigstore/cosign-installer@main
+              uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
               with:
-                  cosign-release: "v1.13.1"
+                  cosign-release: "v1.11.0"
 
             # Workaround: https://github.com/docker/build-push-action/issues/461
             - name: Setup Docker buildx
-              uses: docker/setup-buildx-action@2
+              uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
             # Login against a Docker registry except on PR
             # https://github.com/docker/login-action
             - name: Log into registry ${{ env.REGISTRY }}
               if: github.event_name != 'pull_request'
-              uses: docker/login-action@2
+              uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
               with:
                   registry: ${{ env.REGISTRY }}
                   username: ${{ github.actor }}
@@ -61,7 +61,7 @@ jobs:
             # https://github.com/docker/metadata-action
             - name: Extract Docker metadata
               id: meta
-              uses: docker/metadata-action@4
+              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
               with:
                   images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.APP_NAME }}
 
@@ -69,7 +69,7 @@ jobs:
             # https://github.com/docker/build-push-action
             - name: Build and push Docker image
               id: build-and-push
-              uses: docker/build-push-action@3
+              uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
               with:
                   context: ${{ env.APPNAME }}
                   platforms: linux/amd64,linux/arm64,linux/arm/v7
