--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster-slim as builder
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -yq \
+RUN apt-get update && apt-get install -y -qq \
   bash curl ca-certificates wget unzip
 
 WORKDIR /tmp/
@@ -13,15 +13,14 @@ RUN chmod +x /tmp/*.sh && /tmp/down_n2n.sh
 FROM debian:buster-slim
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get -yq upgrade 
-RUN apt-get -yq install \
+RUN apt-get update &&  apt-get -y -qq install  \
   apt-utils tzdata \
   && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
   && echo "Asia/Shanghai" > /etc/timezone \
   && dpkg-reconfigure -f noninteractive tzdata
 ##################-----##################
 
-RUN apt-get install -yq \
+RUN apt-get install -y -qq \
   wget openssl isc-dhcp-client isc-dhcp-server net-tools iputils-ping \
   curl  ca-certificates traceroute htop psmisc iptables \
   && rm -rf /etc/dhcp/dhcpd.conf
