--- a/n2n_lucktu/Dockerfile
+++ b/n2n_lucktu/Dockerfile
@@ -1,7 +1,8 @@
 FROM debian:buster-slim as downloader
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get -qq update 
+RUN apt-get -qq update
+RUN apt-get -qq -y install apt-utils
 RUN apt-get -qq -y install \
   bash curl wget unzip jq
 
