--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -34,6 +34,9 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
+              
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v2
 
             # Install the cosign tool except on PR
             # https://github.com/sigstore/cosign-installer
