--- a/.github/workflows/n2n.yml
+++ b/.github/workflows/n2n.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: ${{ env.APPNAME }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
+          push: false
           tags: ${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}
           cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:buildcache-${{ env.TAGNAME }}
           cache-to: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:buildcache-${{ env.TAGNAME }},mode=max
