--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -34,7 +34,7 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
-              
+
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v2
 
@@ -42,9 +42,9 @@ jobs:
             # https://github.com/sigstore/cosign-installer
             - name: Install cosign
               if: github.event_name != 'pull_request'
-              uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
+              uses: sigstore/cosign-installer@main
               with:
-                  cosign-release: "v1.11.0"
+                cosign-release: "v1.13.1"
 
             # Workaround: https://github.com/docker/build-push-action/issues/461
             - name: Setup Docker buildx
