--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -76,7 +76,8 @@ jobs:
                   latest_commits=${latest_commits%%_*}
                   LOG_INFO latest_commits=${latest_commits}
 
-                  latest_version=format( '${0}_r${1}_${2}', ${latest_big_version}, ${latest_small_version}, ${latest_commits} )
+                  # latest_version=format( '${0}_r${1}_${2}', ${latest_big_version}, ${latest_small_version}, ${latest_commits} )
+                  latest_version="${latest_big_version}_r${latest_small_version}_${latest_commits}"
                   LOG_INFO latest_version=${latest_version}
 
                   # Setting environment variable
