--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -76,7 +76,7 @@ jobs:
                   latest_commits=${latest_commits%%_*}
                   LOG_INFO latest_commits=${latest_commits}
 
-                  # latest_version=format( '${0}_r${1}_${2}', ${latest_big_version}, ${latest_small_version}, ${latest_commits} )
+                  # latest_version=format( '${0}_${1}_r${2}', ${latest_big_version}, ${latest_small_version}, ${latest_commits} )
                   latest_version="${latest_big_version}_r${latest_small_version}_${latest_commits}"
                   LOG_INFO latest_version=${latest_version}
 
@@ -179,8 +179,8 @@ jobs:
                       type=raw,value=${{ needs.latest_info.outputs.latest_small_version }}, enable=${{ needs.latest_info.outputs.latest_small_version != '' }}
                       type=raw,value=${{ needs.latest_info.outputs.latest_commits }}, enable=${{ needs.latest_info.outputs.latest_commits != '' }}
                       type=raw,value=${{ needs.latest_info.outputs.latest_version }}, enable=${{ needs.latest_info.outputs.latest_version != '' }}
-                      type=raw,value=${{ format( '${0}_r${1}', needs.latest_info.outputs.latest_big_version, needs.latest_info.outputs.latest_small_version ) }}, enable=${{ needs.latest_info.outputs.latest_big_version != '' && needs.latest_info.outputs.latest_small_version != '' }}
-                      type=raw,value=${{ format( 'r${1}_${2}', needs.latest_info.outputs.latest_small_version, needs.latest_info.outputs.latest_commits) }}, enable=${{ needs.latest_info.outputs.latest_small_version != '' && needs.latest_info.outputs.latest_commits != '' }}
+                      type=raw,value=${{ format( '${0}_${1}', needs.latest_info.outputs.latest_big_version, needs.latest_info.outputs.latest_small_version ) }}, enable=${{ needs.latest_info.outputs.latest_big_version != '' && needs.latest_info.outputs.latest_small_version != '' }}
+                      type=raw,value=${{ format( 'r${1}_r${2}', needs.latest_info.outputs.latest_small_version, needs.latest_info.outputs.latest_commits) }}, enable=${{ needs.latest_info.outputs.latest_small_version != '' && needs.latest_info.outputs.latest_commits != '' }}
 
             # latest_big_version: ${{ needs.latest_info.outputs.latest_big_version }}
             # latest_small_version: ${{ needs.latest_info.outputs.latest_small_version }}
