--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -100,7 +100,7 @@ jobs:
               id: get_tag_last_pulled
               uses: sergeysova/jq-action@v2
               with:
-                  cmd: curl https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ needs.get_latest_path.outputs.latest_version }} | jq .tag_last_pulled
+                  cmd: curl https://hub.docker.com/v2/repositories/zctmdc/n2n_lucktu/tags/${{ needs.check_version.outputs.latest_version }} | jq .tag_last_pulled
             - name: Check tag_last_pulled
               id: tag_last_pulled
               run: |
@@ -175,17 +175,17 @@ jobs:
                   images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.APP_NAME }}
                   tags: |
                       type=raw,value=Alpha,enable=${{ github.ref == format('refs/heads/{0}', 'alpha') }}
-                      type=raw,value=${{ needs.latest_info.outputs.latest_big_version }}, enable=${{ needs.latest_info.outputs.latest_big_version != '' }}
-                      type=raw,value=${{ needs.latest_info.outputs.latest_small_version }}, enable=${{ needs.latest_info.outputs.latest_small_version != '' }}
-                      type=raw,value=${{ needs.latest_info.outputs.latest_commits }}, enable=${{ needs.latest_info.outputs.latest_commits != '' }}
-                      type=raw,value=${{ needs.latest_info.outputs.latest_version }}, enable=${{ needs.latest_info.outputs.latest_version != '' }}
-                      type=raw,value=${{ format( '{0}_{1}', needs.latest_info.outputs.latest_big_version, needs.latest_info.outputs.latest_small_version ) }}, enable=${{ needs.latest_info.outputs.latest_big_version != '' && needs.latest_info.outputs.latest_small_version != '' }}
-                      type=raw,value=${{ format( '{0}_r{1}', needs.latest_info.outputs.latest_small_version, needs.latest_info.outputs.latest_commits) }}, enable=${{ needs.latest_info.outputs.latest_small_version != '' && needs.latest_info.outputs.latest_commits != '' }}
+                      type=raw,value=${{ needs.check_version.outputs.latest_big_version }}, enable=${{ needs.check_version.outputs.latest_big_version != '' }}
+                      type=raw,value=${{ needs.check_version.outputs.latest_small_version }}, enable=${{ needs.check_version.outputs.latest_small_version != '' }}
+                      type=raw,value=${{ needs.check_version.outputs.latest_commits }}, enable=${{ needs.check_version.outputs.latest_commits != '' }}
+                      type=raw,value=${{ needs.check_version.outputs.latest_version }}, enable=${{ needs.check_version.outputs.latest_version != '' }}
+                      type=raw,value=${{ format( '{0}_{1}', needs.check_version.outputs.latest_big_version, needs.check_version.outputs.latest_small_version ) }}, enable=${{ needs.check_version.outputs.latest_big_version != '' && needs.check_version.outputs.latest_small_version != '' }}
+                      type=raw,value=${{ format( '{0}_r{1}', needs.check_version.outputs.latest_small_version, needs.check_version.outputs.latest_commits) }}, enable=${{ needs.check_version.outputs.latest_small_version != '' && needs.check_version.outputs.latest_commits != '' }}
 
-            # latest_big_version: ${{ needs.latest_info.outputs.latest_big_version }}
-            # latest_small_version: ${{ needs.latest_info.outputs.latest_small_version }}
-            # latest_commits: ${{ needs.latest_info.outputs.latest_commits }}
-            # latest_version: ${{ needs.latest_info.outputs.latest_version }}
+            # latest_big_version: ${{ needs.check_version.outputs.latest_big_version }}
+            # latest_small_version: ${{ needs.check_version.outputs.latest_small_version }}
+            # latest_commits: ${{ needs.check_version.outputs.latest_commits }}
+            # latest_version: ${{ needs.check_version.outputs.latest_version }}
 
             # Build and push Docker image with Buildx (don't push on PR)
             # https://github.com/docker/build-push-action
