fixbug: 移除多余字符 update: commits version 统一

--- a/n2n_lucktu/Dockerfile
+++ b/n2n_lucktu/Dockerfile
@@ -15,7 +15,7 @@ ARG KERNEL=linux
 ARG MACHINE
 ARG BIG_VERSION=v3
 ARG SMALL_VERSION=3.1.1-16
-ARG COMMITS=r1200
+ARG COMMITS=1200
 ARG OLD
 
 RUN /tmp/scripts/install_rar.sh
